# clipstash

./: .env  .env.sample  Cargo.toml  Makefile  README.md
src/: main.rs
src/lib/: mod.rs
src/lib/api/: clip.rs
src/lib/db/: mod.rs  model.rs
src/lib/db/migrations/: 20240423170926_initial-sql.down.sql  20240423170926_initial-sql.up.sql
src/lib/db/models/: clip.rs
src/lib/db/query/: clip.rs
src/lib/domain/: datetime.rs  mod.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: created_at.rs  expires_at.rs  id.rs  mod.rs  no_of_hits.rs  password.rs  short_code.rs  title.rs
src/lib/domain/clip/fields/: content.rs  created_at.rs  expires_at.rs  id.rs  no_of_hits.rs  password.rs  short_code.rs  title.rs
src/lib/domain/db/: mod.rs
src/lib/domain/db/fields/: id.rs
src/lib/dto/clip/: create_clip.rs  delete_clip.rs  get_clip.rs  mod.rs  update_clip.rs
src/lib/service/: clip.rs  mod.rs
