[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[lib]
name = "lib"
path = "./src/lib/mod.rs"
