[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.11.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "time",
    "chrono",
    "uuid",
] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[lib]
name = "lib"
path = "./src/lib/mod.rs"
